# newsletter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cliff.toml  config.toml  deny.toml  shell.nix
.github/workflows/: ci.yml
config/: base.toml  dev.toml  local.toml  production.toml
migrations/: 20250407135052_add_status_to_subscriptions.sql  20250407144758_make_status_not_null_in_subscriptions.sql  20250407145840_create_subscription_tokens_table.sql
src/: cli.rs  configuration.rs  email_client.rs  error.rs  lib.rs  main.rs  middleware.rs  router.rs  server.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/handlers/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/http/: error.rs  health_check.rs  mod.rs  subscriptions.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
