[package]
name = "newsletter"
version = "0.1.0"
authors = ["okqin <jiqin@outlook.com>"]
publish = false
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["http2", "ws"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
config = "0.14.1"
once_cell = "1.20.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
    "chrono",
] }
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "net",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4"] }
validator = "0.19.0"

[dev-dependencies]
claims = "0.8.0"
fake = "3.0.1"
proptest = "1.5.0"
reqwest = { version = "0.12.9", features = ["json"] }
