[package]
name = "newsletter"
version = "0.1.0"
authors = ["okqin <jiqin@outlook.com>"]
publish = false
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["http2", "ws"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.11"
once_cell = "1.21.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.6.0"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
    "chrono",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "net",
] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.16.0", features = ["v4"] }
validator = "0.20.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }

[dev-dependencies]
claims = "0.8.0"
fake = "4.2.0"
proptest = "1.6.0"
serde_json = "1.0.140"
wiremock = "0.6.3"
